--- a/ly-item/ly-item-service/src/main/resources/application.yml
+++ b/ly-item/ly-item-service/src/main/resources/application.yml
@@ -35,4 +35,6 @@ zuul:
   prefix: /api # 添加路由前缀
   retryable: true
   routes:
-    item-service: /item/** # 将商品微服务映射到/item/**
+    item-service:
+     path: /item/** # 将商品微服务映射到/item/**
+     service-id: item-service # 指定服务名称
