--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,13 @@
     <!--</dependency>-->
     <!--</dependencies>-->
     <!--</dependencyManagement>-->
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.22</version>
+        </dependency>
+    </dependencies>
 
     <dependencyManagement>
         <dependencies>
