--- a/ly-api-gateway/src/main/resources/application.yml
+++ b/ly-api-gateway/src/main/resources/application.yml
@@ -19,6 +19,10 @@ zuul:
     item-service:
      path: /item/** # 将商品微服务映射到/item/**
      service-id: item-service # 指定服务名称
+    upload-service:
+      path: /upload/**
+      service-id: upload-service
+      strip-prefix: false
 ribbon:
   ConnectTimeout: 250 # 连接超时时间(ms)
   ReadTimeout: 2000 # 通信超时时间(ms)
